2009-03-31 Riccardo Mottola <rmottola@users.sf.net>
	
	* PCSplitView: removed and replaced with standard NSSplitView in all instances
	
2009-03-28 Sergii Stoian <stoyan255@gmail.com>

	* Framework/PCProjectBuilder.m: 
	(updateTargetField): Process args correctly when it has nil value.
	(startBuild): Move initializing of currentBuildPath and 
	currentBuildFile from here...
	(build:):...to here. Rename pipes and handles vars to more appropriate
	names. Initialize pipes with alloc, init.
	(startClean): Use buildArguments as in startBuild method.
	(stopMake:): It seems that [makeTask isRunning] works correctly -
	use it. Remove comment.
	(cleanupAfterMake): Use _isBuilding and _isCleaning vars to detect
	running mode. Release currentBuildPath and currentBuildFile here.
	(buildDidTerminate): Release pipes here.
	(logData:error:): Initialize newLineRange.location before entering
	cycle.
	(logBuildString:newLine:): Cleanup.

2009-03-27 03:00-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Framework/PCProject.m: Implement openWrapperAtPath:
	* Framework/PCProjectManager.m: Change method call to use
	openWrapperAtPath:
	* Headers/ProjectCenter/PCProject.h: Add wrapperPath ivar.
	* Modules/Projects/Application/PCAppProject.m:
	Change method to call super.
	* Modules/Projects/Tool/PCToolProject.m: Change method to 
	call super.

2009-03-27 01:18-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Framework/English.lproj/Builder.gorm: Update icons for stop and
	options.
	* Framework/PCProject.m: Added code to put files into packages when
	saving.
	* Headers/ProjectCenter/PCProject.h: Added ivar for file wrapper.

2009-03-27 Riccardo Mottola <rmottola@users.sf.net>

	* Framework/PCProject.m: save windows placements to a separate 
	file with the username as name

2009-03-24 Sergii Stoian <stoyan255@gmail.com>

	* Framework/PCProjectBuilder.m: Add some comments
	(parseCompilerLine:): Implemented gcc output for compiling and